Near-Earth-Objects-API/kubernetes/test/app-test-deployment-flask.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  labels:
    app: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test-container
          image: mjt2005/neo_api:1.0
          imagePullPolicy: Always
          command: ["flask", "run", "--host=0.0.0.0", "--port=5000"]
          ports:
            - name: http
              containerPort: 5000
