Near-Earth-Objects-API/kubernetes/test/app-test-ingress-flask.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: "test-neo-flask.coe332.tacc.cloud"  
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: test-flask-nodeport-service
                port:
                  number: 5000
