Near-Earth-Objects-API/kubernetes/test/app-test-service-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: test-flask-service
spec:
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
