Near-Earth-Objects-API/kubernetes/test/app-test-service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: test-redis-db
spec:
  type: ClusterIP
  selector:
    app: test-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
